added two new games and changed the important information on the front page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p><strong>Recent Changes</strong><br>- Added the Tenframe website to projects. View it at <i>https://tenframegames.com</i> or <i>https://sites.google.com/view/tenframe</i> as either one works.<br>- Added <i>Vocabulary List 6</i><br><br></p>
+                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they won't work.<br><br><strong>Recent Changes</strong><br>- Added Vocabulary List 6<br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
@@ -322,7 +322,14 @@
                     <a href="https://brodynewell.com/games/golf/play" class="box" target="_blank">
                         <img src="assets/img/games/golf.png" alt="">
                         <div class="text">Golf</div>
-                        <p>Minigolf, but on your computer. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
+                        <p>The 3D version of Mini-Golf that provides a wonderful course to complete. Levels and maps will be added often in the future along with wonderful bug patches. Note that this is my first time making a 3D golf game from scratch, so there will be some bugs in the game. If you find one let me know in the contact form located at the bottom of the website.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/games/minigolf/play" class="box" target="_blank">
+                        <img src="assets/img/games/golf.png" alt="">
+                        <div class="text">Mini-Golf</div>
+                        <p>Minigolf, but on your computer. The 2D Mini-Golf that is wonderful to play against a friend. Satisfying gameplay and wonderful approaches to each level and course. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
                     </a>
                 </div>
                 <div class="card">
@@ -409,7 +416,14 @@
                     <a href="https://brodynewell.com/games/golf/play" class="box" target="_blank">
                         <img src="assets/img/games/golf.png" alt="">
                         <div class="text">Golf</div>
-                        <p>Minigolf, but on your computer. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
+                        <p>The 3D version of Mini-Golf that provides a wonderful course to complete. Levels and maps will be added often in the future along with wonderful bug patches. Note that this is my first time making a 3D golf game from scratch, so there will be some bugs in the game. If you find one let me know in the contact form located at the bottom of the website.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/games/minigolf/play" class="box" target="_blank">
+                        <img src="assets/img/games/minigolf.png" alt="">
+                        <div class="text">Mini-Golf</div>
+                        <p>Minigolf, but on your computer. The 2D Mini-Golf that is wonderful to play against a friend. Satisfying gameplay and wonderful approaches to each level and course. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
                     </a>
                 </div>
                 <div class="card">
