--- a/games/minigolf/index.html
+++ b/games/minigolf/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>MiniGolf</title>
+    <title>2D Mini-Golf</title>
     <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png" />
     <link rel="stylesheet" href="TemplateData/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,38 +20,62 @@
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
+        <!--<div id="unity-logo"></div>-->
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-      <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices.
-      </div>
+      <div id="unity-warning"> </div>
       <div id="unity-footer">
+        <!--<div id="unity-webgl-logo"></div>-->
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">MiniGolf</div>
+        <div id="unity-build-title">2D Mini-Golf</div>
       </div>
     </div>
     <script>
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/MiniGolf.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/MiniGolf.data.gz",
-        frameworkUrl: buildUrl + "/MiniGolf.framework.js.gz",
-        codeUrl: buildUrl + "/MiniGolf.wasm.gz",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "Tenframe Games",
-        productName: "We Golf",
-        productVersion: "1.0",
-      };
-
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var mobileWarning = document.querySelector("#unity-mobile-warning");
+      var warningBanner = document.querySelector("#unity-warning");
+
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
+      function unityShowBanner(msg, type) {
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function() {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
+
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/minigolf.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/minigolf.data.gz",
+        frameworkUrl: buildUrl + "/minigolf.framework.js.gz",
+        codeUrl: buildUrl + "/minigolf.wasm.gz",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "Tenframe Games",
+        productName: "2D Mini-Golf",
+        productVersion: "1.0",
+        showBanner: unityShowBanner,
+      };
 
       // By default Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
@@ -65,10 +89,7 @@
         // Avoid draining fillrate performance on mobile devices,
         // and default/override low DPI mode on mobile browsers.
         config.devicePixelRatio = 1;
-        mobileWarning.style.display = "block";
-        setTimeout(() => {
-          mobileWarning.style.display = "none";
-        }, 5000);
+        unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         canvas.style.width = "960px";
         canvas.style.height = "600px";
