--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they won't work.<br><br><strong>Recent Changes</strong><br>- Added Vocabulary List 6<br><br></p>
+                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they will not work right now.<br><br><strong>Recent Changes</strong><br>- Added a new Spanish Quizlet, A Ver Si Recurdas<br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
@@ -240,6 +240,13 @@
             <h2 class="title">Spanish Resources</h2>
             <div class="carousel owl-carousel">
               <div class="card">
+                    <a href="https://quizlet.com/_aklpc9?x=1jqt&i=2852uv" class="box" target="_blank">
+                        <img src="assets/img/pages/quizlet.png" alt="">
+                        <div class="text">A Ver Si Recurdas 2B</div>
+                        <p>Spanish 2 - Vocabulary list to help with studies. 1st Semester.</p>
+                    </a>
+                </div>
+              <div class="card">
                     <a href="https://quizlet.com/_5flf1h?x=1jqt&i=2852uv" class="box" target="_blank">
                         <img src="assets/img/pages/quizlet.png" alt="">
                         <div class="text">Capitulo 2A</div>
@@ -327,7 +334,7 @@
                 </div>
                 <div class="card">
                     <a href="https://brodynewell.com/games/minigolf/play" class="box" target="_blank">
-                        <img src="assets/img/games/golf.png" alt="">
+                        <img src="assets/img/games/minigolf.png" alt="">
                         <div class="text">Mini-Golf</div>
                         <p>Minigolf, but on your computer. The 2D Mini-Golf that is wonderful to play against a friend. Satisfying gameplay and wonderful approaches to each level and course. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
                     </a>
