changed a couple of meta tags and the font family for the dictionary

--- a/calculator.html
+++ b/calculator.html
@@ -20,6 +20,12 @@
   gtag('config', 'G-MBT4MB7N3F');
 
 	</script>
+
+  <meta name="title" content="Calculator" />
+	<meta name="description" content="Brody Newell's calculator" />
+	<meta name="keyword" content="brody, newell, portfolio, football, engineering, engineer, resume, cool, games, about, projects"
+	/>
+
 </head>
 
 <body>
