--- a/dictionary.html
+++ b/dictionary.html
@@ -29,6 +29,12 @@
   gtag('config', 'G-MBT4MB7N3F');
 
 	</script>
+
+  <meta name="title" content="Dictionary" />
+	<meta name="description" content="Brody Newell's dictionary" />
+	<meta name="keyword" content="brody, newell, portfolio, football, engineering, engineer, resume, cool, games, about, projects"
+	/>
+
 </head>
 
 <body>
