--- a/draw.html
+++ b/draw.html
@@ -21,7 +21,12 @@
     <link rel="stylesheet" href="assets/other/fontawesome-free-5.15.3_min/css/all.min.css">
     <link rel="stylesheet" href="assets/other/bootstrap-5.1.0-dist//css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/draw.css">
-    
+  
+  <meta name="title" content="Drawing Tool" />
+	<meta name="description" content="Brody Newell's drawing tool" />
+	<meta name="keyword" content="brody, newell, portfolio, football, engineering, engineer, resume, cool, games, about, projects"
+	/>
+
 </head>
 <body>
     <div id="main container-fluid">
