added new updates

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they will not work right now.<br><br><strong>Recent Changes</strong><br>- Added a new Spanish Quizlet, A Ver Si Recurdas<br><br></p>
+                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they will not work right now.<br><br><strong>Recent Changes</strong><br>- Made the Dictionary easily able to be copy and pasted<br><br>- Changed the colors of Calculator and Dictionary<br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
