--- a/e.html
+++ b/e.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Brody Newell</title>
+	<title>Dictionary - Brody Newell</title>
 
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
 
