--- a/test.html
+++ b/test.html
@@ -26,8 +26,7 @@
 	<meta name="keyword" content="brody, newell, portfolio, football, engineering, engineer, resume, cool, games, about, projects"
 	/>
 
-	<link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/dictionary.css">
+	<link rel="stylesheet" href="assets/css/test.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js">
 	</script>
