added a thesaurus and changed the headings on the website

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they will not work right now.<br><br><strong>Recent Changes</strong><br>- Made the Dictionary easily able to be copy and pasted<br><br>- Changed the colors of Calculator and Dictionary<br><br></p>
+                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they will not work right now.<br><br><strong>Recent Changes</strong><br>- I made a new Dictionary and now a Thesaurus. Yes now you can get your vocab homework done without those pesky ads, and it's more simplified.<br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
@@ -172,6 +172,13 @@
                         <img src="assets/img/pages/dictionary.png" alt="">
                         <div class="text">Dictionary</div>
                         <p>An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/thesaurus" class="box" target="_blank">
+                        <img src="assets/img/pages/thesaurus.png" alt="">
+                        <div class="text">Thesaurus</div>
+                        <p>An actual thesaurus that gives a voice prononciation and makes it easy to copy and paste the synonyms.</p>
                     </a>
                 </div>
                 <div class="card">
@@ -358,6 +365,13 @@
                         <img src="assets/img/pages/dictionary.png" alt="">
                         <div class="text">Dictionary</div>
                         <p>An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/thesaurus" class="box" target="_blank">
+                        <img src="assets/img/pages/thesaurus.png" alt="">
+                        <div class="text">Thesaurus</div>
+                        <p>An actual thesaurus that gives a voice prononciation and makes it easy to copy and paste the synonyms.</p>
                     </a>
                 </div>
                 <div class="card">
