--- a/thesaurus.html
+++ b/thesaurus.html
@@ -17,7 +17,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 	<!-- Title -->
-	<title>Dictionary - Brody Newell</title>
+	<title>Thesaurus - Brody Newell</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBT4MB7N3F">
 	</script>
@@ -30,8 +30,8 @@
 
 	</script>
 
-  <meta name="title" content="Dictionary" />
-	<meta name="description" content="Brody Newell's dictionary" />
+  <meta name="title" content="thesaurus" />
+	<meta name="description" content="Brody Newell's thesaurus" />
 	<meta name="keyword" content="brody, newell, portfolio, football, engineering, engineer, resume, cool, games, about, projects"
 	/>
 
@@ -39,7 +39,7 @@
 
 <body>
 	<section id="main_board">
-		<h1>Dictionary</h1>
+		<h1>Thesaurus</h1>
 		<form action="/" id="search">
 			<input type="text" id="input">
         <button class="btn">Search</button>
@@ -50,6 +50,6 @@
   <div class="square"></div>
   <div class="triangle"></div>-->
     
-      <script src="assets/js/dictionary.js"></script>
+      <script src="assets/js/thesaurus.js"></script>
 </body>
 </html>
