--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Calculator</title>
+	<title>Calculator - Brody Newell</title>
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
 	<link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/legit-ripple@1.1.0/dist/ripple.min.css">
