added new vocab lists with a thesaurus

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they will not work right now.<br><br><strong>Recent Changes</strong><br>- I made a new Dictionary and now a Thesaurus. Yes now you can get your vocab homework done without those pesky ads, and it's more simplified.<br><br></p>
+                  <p><strong>IMPORTANT</strong><br>Ignore the golf games that are on the site, as they will send a couple of errors. I will get to fixing them shortly but they will not work right now.<br><br><strong>Recent Changes</strong><br>- I made a new Dictionary and now a Thesaurus. Yes now you can get your vocab homework done without those pesky ads, and it's more simplified.<br><br>- Added Vocabulary List 7 and the new vocabulary list for Spanish.<br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
@@ -197,6 +197,13 @@
             <h2 class="title">English Resources</h2>
             <div class="carousel owl-carousel">
               <div class="card">
+                    <a href="https://quizlet.com/_am2z5i?x=1qqt&i=2852uv" class="box" target="_blank">
+                        <img src="assets/img/pages/quizlet.png" alt="">
+                        <div class="text">Vocabulary List 7</div>
+                        <p>English 1 Honors - Vocabulary list to help with studies. 1st Semester.</p>
+                    </a>
+                </div>
+              <div class="card">
                     <a href="https://quizlet.com/_aj5ye0?x=1qqt&i=2852uv" class="box" target="_blank">
                         <img src="assets/img/pages/quizlet.png" alt="">
                         <div class="text">Vocabulary List 6</div>
@@ -246,6 +253,13 @@
         <div class="max-width">
             <h2 class="title">Spanish Resources</h2>
             <div class="carousel owl-carousel">
+              <div class="card">
+                    <a href="https://quizlet.com/_5jf5b1?x=1jqt&i=2852uv" class="box" target="_blank">
+                        <img src="assets/img/pages/quizlet.png" alt="">
+                        <div class="text">Capitulo 2B</div>
+                        <p>Spanish 2 - Vocabulary list to help with studies. 1st Semester.</p>
+                    </a>
+                </div>
               <div class="card">
                     <a href="https://quizlet.com/_aklpc9?x=1jqt&i=2852uv" class="box" target="_blank">
                         <img src="assets/img/pages/quizlet.png" alt="">
