updated the about me page

--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
                 <div class="column right">
                     <div class="text"><strong>Who am I?</strong></div> <div class="blue-text"><span class="typing-about"></span></div>
                     <p><br><br>I love sports and hands-on classes. Usually, I tend to excell in my classes and help others during their problems.<br><br>I have picked up quite a few skills during self teaching myself and aim to improve these skills everyday. One of the most frequently practiced is for sure football, but in my freetime I love to build things or explore subjects that I find facinating. I got into coding about four years ago and ever since then, I have improved this website. (I could not have done it without google and the help of other developers with their feedback).<br><br>More information about me is listed below<br><br><span class="fas fa-chevron-right"></span><strong> Full Name: </strong> Brody Newell<br><br><span class="fas fa-chevron-right"></span><strong> Date of Birth: </strong>[HIDDEN]<br><br><span class="fas fa-chevron-right"></span><strong> Email: </strong>realbrodynewell@gmail.com (Secondary Email)<br><br><span class="fas fa-chevron-right"></span><strong> Languages Known: </strong>English, (Learning Spanish)<br><br><br></p>
-                    <h3>Sports</h3>
-                    <p><br><span class="fas fa-chevron-right"></span><strong> Number: </strong>#78<br><br><span class="fas fa-chevron-right"></span><strong> Main Position: </strong>Longsnapper<br><br><span class="fas fa-chevron-right"></span><strong> Height: </strong>5'6"<br><br><span class="fas fa-chevron-right"></span><strong> Weight: </strong>138.6 lbs.</p>
+                    <h3>Football</h3>
+                    <p><br><span class="fas fa-chevron-right"></span><strong> Number: </strong>#78<br><br><span class="fas fa-chevron-right"></span><strong> Main Position: </strong>Longsnapper<br><br></p>
+                    <h3>Lacrosse</h3>
+                    <p><br><span class="fas fa-chevron-right"></span><strong> Number: </strong>TBD<br><br><span class="fas fa-chevron-right"></span><strong> Main Position: </strong>Attack<p>
                     <a href="#projects">Projects</a>
                 </div>
             </div>
@@ -156,7 +158,7 @@
     </section>
 
     <!------------------------------ Resources ------------------------------>
-    <section class="resources" id="resources-pages">
+    <section class="resources" id="resources">
         <div class="max-width">
             <h2 class="title">Helpful Pages</h2>
             <div class="carousel owl-carousel">
@@ -192,7 +194,7 @@
         </div>
     </section>
 
-    <section class="resources" id="resources">
+    <section class="resources" id="resources-quizlet">
         <div class="max-width">
             <h2 class="title">English Resources</h2>
             <div class="carousel owl-carousel">
@@ -249,7 +251,7 @@
         </div>
     </section>
 
-    <section class="resources" id="resources">
+    <section class="resources" id="resources-quizlet">
         <div class="max-width">
             <h2 class="title">Spanish Resources</h2>
             <div class="carousel owl-carousel">
